assignment4/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> declarations functionblocks
Rule 2     declarations -> declarations vardecl SEMICOLON
Rule 3     declarations -> declarations funcdecl SEMICOLON
Rule 4     declarations -> <empty>
Rule 5     vardecl -> type decllist
Rule 6     funcdecl -> type pointerdef LPAREN paramlist RPAREN
Rule 7     funcdecl -> type NAME LPAREN paramlist RPAREN
Rule 8     paramlist -> paramlistnotempty
Rule 9     paramlist -> <empty>
Rule 10    paramlistnotempty -> type startwithany C
Rule 11    C -> COMMA paramlistnotempty
Rule 12    C -> <empty>
Rule 13    functionblocks -> functionblock functionblocks
Rule 14    functionblocks -> <empty>
Rule 15    functionblock -> type functionscope LPAREN paramlist RPAREN LFBRACK lines RFBRACK
Rule 16    functionblock -> mainblock
Rule 17    functionscope -> NAME
Rule 18    functionscope -> pointerdef
Rule 19    type -> INT
Rule 20    type -> FLOAT
Rule 21    mainblock -> VOID MAIN LPAREN RPAREN LFBRACK lines RFBRACK
Rule 22    lines -> line SEMICOLON lines
Rule 23    lines -> <empty>
Rule 24    lines -> ifblock lines
Rule 25    lines -> whileblock lines
Rule 26    ifblock -> IF LPAREN CONDITION RPAREN conditionalbody
Rule 27    whileblock -> WHILE LPAREN CONDITION RPAREN conditionalbody
Rule 28    ifblock -> IF LPAREN CONDITION RPAREN conditionalbody ELSE ifelsehandler
Rule 29    ifelsehandler -> conditionalbody
Rule 30    ifelsehandler -> ifblock
Rule 31    conditionalbody -> line SEMICOLON
Rule 32    conditionalbody -> LFBRACK lines RFBRACK
Rule 33    CONDITION -> booleanexpr
Rule 34    booleanexpr -> booleanexpr OR booleanexpr
Rule 35    booleanexpr -> booleanexpr AND booleanexpr
Rule 36    booleanexpr -> LPAREN booleanexpr RPAREN
Rule 37    booleanexpr -> NEGATION booleanexpr
Rule 38    boolfromarith -> arithmeticexpr LTE arithmeticexpr
Rule 39    boolfromarith -> arithmeticexpr GTE arithmeticexpr
Rule 40    boolfromarith -> arithmeticexpr LT arithmeticexpr
Rule 41    boolfromarith -> arithmeticexpr GT arithmeticexpr
Rule 42    boolfromarith -> arithmeticexpr COMPARENOTEQUAL arithmeticexpr
Rule 43    boolfromarith -> arithmeticexpr COMPAREEQUAL arithmeticexpr
Rule 44    booleanexpr -> boolfromarith
Rule 45    line -> type decllist
Rule 46    line -> assignmentlist
Rule 47    line -> RETURN startwithany
Rule 48    decllist -> pointerdef x
Rule 49    pointerdef -> POINTER NAME
Rule 50    pointerdef -> POINTER pointerdef
Rule 51    x -> COMMA pointerdef x
Rule 52    decllist -> NAME x
Rule 53    x -> COMMA NAME x
Rule 54    x -> <empty>
Rule 55    assignmentlist -> assignment
Rule 56    assignment -> NAME ASSIGN arithmeticexpr
Rule 57    assignment -> startwithstar ASSIGN arithmeticexpr
Rule 58    arithmeticexpr -> arithmeticexpr PLUS arithmeticexpr
Rule 59    arithmeticexpr -> arithmeticexpr MINUS arithmeticexpr
Rule 60    arithmeticexpr -> arithmeticexpr POINTER arithmeticexpr
Rule 61    arithmeticexpr -> arithmeticexpr DIVIDE arithmeticexpr
Rule 62    arithmeticexpr -> MINUS arithmeticexpr
Rule 63    arithmeticexpr -> LPAREN arithmeticexpr RPAREN
Rule 64    arithmeticexpr -> NUMBER
Rule 65    arithmeticexpr -> FLOATNUM
Rule 66    arithmeticexpr -> startwithany
Rule 67    startwithstar -> POINTER startwithany
Rule 68    startwithany -> POINTER startwithany
Rule 69    startwithany -> AMPERSAND startwithany
Rule 70    startwithany -> NAME

Terminals, with rules where they appear

AMPERSAND            : 69
AND                  : 35
ASSIGN               : 56 57
COMMA                : 11 51 53
COMPAREEQUAL         : 43
COMPARENOTEQUAL      : 42
DIVIDE               : 61
ELSE                 : 28
FLOAT                : 20
FLOATNUM             : 65
GT                   : 41
GTE                  : 39
IF                   : 26 28
INT                  : 19
LFBRACK              : 15 21 32
LPAREN               : 6 7 15 21 26 27 28 36 63
LT                   : 40
LTE                  : 38
MAIN                 : 21
MINUS                : 59 62
NAME                 : 7 17 49 52 53 56 70
NEGATION             : 37
NUMBER               : 64
OR                   : 34
PLUS                 : 58
POINTER              : 49 50 60 67 68
RETURN               : 47
RFBRACK              : 15 21 32
RPAREN               : 6 7 15 21 26 27 28 36 63
SEMICOLON            : 2 3 22 31
VOID                 : 21
WHILE                : 27
error                : 

Nonterminals, with rules where they appear

C                    : 10
CONDITION            : 26 27 28
arithmeticexpr       : 38 38 39 39 40 40 41 41 42 42 43 43 56 57 58 58 59 59 60 60 61 61 62 63
assignment           : 55
assignmentlist       : 46
booleanexpr          : 33 34 34 35 35 36 37
boolfromarith        : 44
conditionalbody      : 26 27 28 29
declarations         : 1 2 3
decllist             : 5 45
funcdecl             : 3
functionblock        : 13
functionblocks       : 1 13
functionscope        : 15
ifblock              : 24 30
ifelsehandler        : 28
line                 : 22 31
lines                : 15 21 22 24 25 32
mainblock            : 16
paramlist            : 6 7 15
paramlistnotempty    : 8 11
pointerdef           : 6 18 48 50 51
startwithany         : 10 47 66 67 68 69
startwithstar        : 57
statement            : 0
type                 : 5 6 7 10 15 45
vardecl              : 2
whileblock           : 25
x                    : 48 51 52 53

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . declarations functionblocks
    (2) declarations -> . declarations vardecl SEMICOLON
    (3) declarations -> . declarations funcdecl SEMICOLON
    (4) declarations -> .

    INT             reduce using rule 4 (declarations -> .)
    FLOAT           reduce using rule 4 (declarations -> .)
    VOID            reduce using rule 4 (declarations -> .)
    $end            reduce using rule 4 (declarations -> .)

    declarations                   shift and go to state 1
    statement                      shift and go to state 2

state 1

    (1) statement -> declarations . functionblocks
    (2) declarations -> declarations . vardecl SEMICOLON
    (3) declarations -> declarations . funcdecl SEMICOLON
    (13) functionblocks -> . functionblock functionblocks
    (14) functionblocks -> .
    (5) vardecl -> . type decllist
    (6) funcdecl -> . type pointerdef LPAREN paramlist RPAREN
    (7) funcdecl -> . type NAME LPAREN paramlist RPAREN
    (15) functionblock -> . type functionscope LPAREN paramlist RPAREN LFBRACK lines RFBRACK
    (16) functionblock -> . mainblock
    (19) type -> . INT
    (20) type -> . FLOAT
    (21) mainblock -> . VOID MAIN LPAREN RPAREN LFBRACK lines RFBRACK

    $end            reduce using rule 14 (functionblocks -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    VOID            shift and go to state 6

    type                           shift and go to state 8
    functionblock                  shift and go to state 3
    vardecl                        shift and go to state 4
    funcdecl                       shift and go to state 9
    functionblocks                 shift and go to state 5
    mainblock                      shift and go to state 7

state 2

    (0) S' -> statement .



state 3

    (13) functionblocks -> functionblock . functionblocks
    (13) functionblocks -> . functionblock functionblocks
    (14) functionblocks -> .
    (15) functionblock -> . type functionscope LPAREN paramlist RPAREN LFBRACK lines RFBRACK
    (16) functionblock -> . mainblock
    (19) type -> . INT
    (20) type -> . FLOAT
    (21) mainblock -> . VOID MAIN LPAREN RPAREN LFBRACK lines RFBRACK

    $end            reduce using rule 14 (functionblocks -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    VOID            shift and go to state 6

    type                           shift and go to state 12
    functionblocks                 shift and go to state 13
    functionblock                  shift and go to state 3
    mainblock                      shift and go to state 7

state 4

    (2) declarations -> declarations vardecl . SEMICOLON

    SEMICOLON       shift and go to state 14


state 5

    (1) statement -> declarations functionblocks .

    $end            reduce using rule 1 (statement -> declarations functionblocks .)


state 6

    (21) mainblock -> VOID . MAIN LPAREN RPAREN LFBRACK lines RFBRACK

    MAIN            shift and go to state 15


state 7

    (16) functionblock -> mainblock .

    INT             reduce using rule 16 (functionblock -> mainblock .)
    FLOAT           reduce using rule 16 (functionblock -> mainblock .)
    VOID            reduce using rule 16 (functionblock -> mainblock .)
    $end            reduce using rule 16 (functionblock -> mainblock .)


state 8

    (5) vardecl -> type . decllist
    (6) funcdecl -> type . pointerdef LPAREN paramlist RPAREN
    (7) funcdecl -> type . NAME LPAREN paramlist RPAREN
    (15) functionblock -> type . functionscope LPAREN paramlist RPAREN LFBRACK lines RFBRACK
    (48) decllist -> . pointerdef x
    (52) decllist -> . NAME x
    (49) pointerdef -> . POINTER NAME
    (50) pointerdef -> . POINTER pointerdef
    (17) functionscope -> . NAME
    (18) functionscope -> . pointerdef

    NAME            shift and go to state 17
    POINTER         shift and go to state 16

    decllist                       shift and go to state 18
    functionscope                  shift and go to state 19
    pointerdef                     shift and go to state 20

state 9

    (3) declarations -> declarations funcdecl . SEMICOLON

    SEMICOLON       shift and go to state 21


state 10

    (19) type -> INT .

    NAME            reduce using rule 19 (type -> INT .)
    POINTER         reduce using rule 19 (type -> INT .)
    AMPERSAND       reduce using rule 19 (type -> INT .)


state 11

    (20) type -> FLOAT .

    NAME            reduce using rule 20 (type -> FLOAT .)
    POINTER         reduce using rule 20 (type -> FLOAT .)
    AMPERSAND       reduce using rule 20 (type -> FLOAT .)


state 12

    (15) functionblock -> type . functionscope LPAREN paramlist RPAREN LFBRACK lines RFBRACK
    (17) functionscope -> . NAME
    (18) functionscope -> . pointerdef
    (49) pointerdef -> . POINTER NAME
    (50) pointerdef -> . POINTER pointerdef

    NAME            shift and go to state 22
    POINTER         shift and go to state 16

    functionscope                  shift and go to state 19
    pointerdef                     shift and go to state 23

state 13

    (13) functionblocks -> functionblock functionblocks .

    $end            reduce using rule 13 (functionblocks -> functionblock functionblocks .)


state 14

    (2) declarations -> declarations vardecl SEMICOLON .

    INT             reduce using rule 2 (declarations -> declarations vardecl SEMICOLON .)
    FLOAT           reduce using rule 2 (declarations -> declarations vardecl SEMICOLON .)
    VOID            reduce using rule 2 (declarations -> declarations vardecl SEMICOLON .)
    $end            reduce using rule 2 (declarations -> declarations vardecl SEMICOLON .)


state 15

    (21) mainblock -> VOID MAIN . LPAREN RPAREN LFBRACK lines RFBRACK

    LPAREN          shift and go to state 24


state 16

    (49) pointerdef -> POINTER . NAME
    (50) pointerdef -> POINTER . pointerdef
    (49) pointerdef -> . POINTER NAME
    (50) pointerdef -> . POINTER pointerdef

    NAME            shift and go to state 25
    POINTER         shift and go to state 16

    pointerdef                     shift and go to state 26

state 17

    (7) funcdecl -> type NAME . LPAREN paramlist RPAREN
    (52) decllist -> NAME . x
    (17) functionscope -> NAME .
    (51) x -> . COMMA pointerdef x
    (53) x -> . COMMA NAME x
    (54) x -> .

  ! shift/reduce conflict for LPAREN resolved as shift
    LPAREN          shift and go to state 29
    COMMA           shift and go to state 28
    SEMICOLON       reduce using rule 54 (x -> .)

  ! LPAREN          [ reduce using rule 17 (functionscope -> NAME .) ]

    x                              shift and go to state 27

state 18

    (5) vardecl -> type decllist .

    SEMICOLON       reduce using rule 5 (vardecl -> type decllist .)


state 19

    (15) functionblock -> type functionscope . LPAREN paramlist RPAREN LFBRACK lines RFBRACK

    LPAREN          shift and go to state 30


state 20

    (6) funcdecl -> type pointerdef . LPAREN paramlist RPAREN
    (48) decllist -> pointerdef . x
    (18) functionscope -> pointerdef .
    (51) x -> . COMMA pointerdef x
    (53) x -> . COMMA NAME x
    (54) x -> .

  ! shift/reduce conflict for LPAREN resolved as shift
    LPAREN          shift and go to state 32
    COMMA           shift and go to state 28
    SEMICOLON       reduce using rule 54 (x -> .)

  ! LPAREN          [ reduce using rule 18 (functionscope -> pointerdef .) ]

    x                              shift and go to state 31

state 21

    (3) declarations -> declarations funcdecl SEMICOLON .

    INT             reduce using rule 3 (declarations -> declarations funcdecl SEMICOLON .)
    FLOAT           reduce using rule 3 (declarations -> declarations funcdecl SEMICOLON .)
    VOID            reduce using rule 3 (declarations -> declarations funcdecl SEMICOLON .)
    $end            reduce using rule 3 (declarations -> declarations funcdecl SEMICOLON .)


state 22

    (17) functionscope -> NAME .

    LPAREN          reduce using rule 17 (functionscope -> NAME .)


state 23

    (18) functionscope -> pointerdef .

    LPAREN          reduce using rule 18 (functionscope -> pointerdef .)


state 24

    (21) mainblock -> VOID MAIN LPAREN . RPAREN LFBRACK lines RFBRACK

    RPAREN          shift and go to state 33


state 25

    (49) pointerdef -> POINTER NAME .

    LPAREN          reduce using rule 49 (pointerdef -> POINTER NAME .)
    COMMA           reduce using rule 49 (pointerdef -> POINTER NAME .)
    SEMICOLON       reduce using rule 49 (pointerdef -> POINTER NAME .)


state 26

    (50) pointerdef -> POINTER pointerdef .

    LPAREN          reduce using rule 50 (pointerdef -> POINTER pointerdef .)
    COMMA           reduce using rule 50 (pointerdef -> POINTER pointerdef .)
    SEMICOLON       reduce using rule 50 (pointerdef -> POINTER pointerdef .)


state 27

    (52) decllist -> NAME x .

    SEMICOLON       reduce using rule 52 (decllist -> NAME x .)


state 28

    (51) x -> COMMA . pointerdef x
    (53) x -> COMMA . NAME x
    (49) pointerdef -> . POINTER NAME
    (50) pointerdef -> . POINTER pointerdef

    NAME            shift and go to state 35
    POINTER         shift and go to state 16

    pointerdef                     shift and go to state 34

state 29

    (7) funcdecl -> type NAME LPAREN . paramlist RPAREN
    (8) paramlist -> . paramlistnotempty
    (9) paramlist -> .
    (10) paramlistnotempty -> . type startwithany C
    (19) type -> . INT
    (20) type -> . FLOAT

    RPAREN          reduce using rule 9 (paramlist -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    type                           shift and go to state 36
    paramlist                      shift and go to state 37
    paramlistnotempty              shift and go to state 38

state 30

    (15) functionblock -> type functionscope LPAREN . paramlist RPAREN LFBRACK lines RFBRACK
    (8) paramlist -> . paramlistnotempty
    (9) paramlist -> .
    (10) paramlistnotempty -> . type startwithany C
    (19) type -> . INT
    (20) type -> . FLOAT

    RPAREN          reduce using rule 9 (paramlist -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    type                           shift and go to state 36
    paramlist                      shift and go to state 39
    paramlistnotempty              shift and go to state 38

state 31

    (48) decllist -> pointerdef x .

    SEMICOLON       reduce using rule 48 (decllist -> pointerdef x .)


state 32

    (6) funcdecl -> type pointerdef LPAREN . paramlist RPAREN
    (8) paramlist -> . paramlistnotempty
    (9) paramlist -> .
    (10) paramlistnotempty -> . type startwithany C
    (19) type -> . INT
    (20) type -> . FLOAT

    RPAREN          reduce using rule 9 (paramlist -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    type                           shift and go to state 36
    paramlist                      shift and go to state 40
    paramlistnotempty              shift and go to state 38

state 33

    (21) mainblock -> VOID MAIN LPAREN RPAREN . LFBRACK lines RFBRACK

    LFBRACK         shift and go to state 41


state 34

    (51) x -> COMMA pointerdef . x
    (51) x -> . COMMA pointerdef x
    (53) x -> . COMMA NAME x
    (54) x -> .

    COMMA           shift and go to state 28
    SEMICOLON       reduce using rule 54 (x -> .)

    x                              shift and go to state 42

state 35

    (53) x -> COMMA NAME . x
    (51) x -> . COMMA pointerdef x
    (53) x -> . COMMA NAME x
    (54) x -> .

    COMMA           shift and go to state 28
    SEMICOLON       reduce using rule 54 (x -> .)

    x                              shift and go to state 43

state 36

    (10) paramlistnotempty -> type . startwithany C
    (68) startwithany -> . POINTER startwithany
    (69) startwithany -> . AMPERSAND startwithany
    (70) startwithany -> . NAME

    POINTER         shift and go to state 44
    AMPERSAND       shift and go to state 46
    NAME            shift and go to state 45

    startwithany                   shift and go to state 47

state 37

    (7) funcdecl -> type NAME LPAREN paramlist . RPAREN

    RPAREN          shift and go to state 48


state 38

    (8) paramlist -> paramlistnotempty .

    RPAREN          reduce using rule 8 (paramlist -> paramlistnotempty .)


state 39

    (15) functionblock -> type functionscope LPAREN paramlist . RPAREN LFBRACK lines RFBRACK

    RPAREN          shift and go to state 49


state 40

    (6) funcdecl -> type pointerdef LPAREN paramlist . RPAREN

    RPAREN          shift and go to state 50


state 41

    (21) mainblock -> VOID MAIN LPAREN RPAREN LFBRACK . lines RFBRACK
    (22) lines -> . line SEMICOLON lines
    (23) lines -> .
    (24) lines -> . ifblock lines
    (25) lines -> . whileblock lines
    (45) line -> . type decllist
    (46) line -> . assignmentlist
    (47) line -> . RETURN startwithany
    (26) ifblock -> . IF LPAREN CONDITION RPAREN conditionalbody
    (28) ifblock -> . IF LPAREN CONDITION RPAREN conditionalbody ELSE ifelsehandler
    (27) whileblock -> . WHILE LPAREN CONDITION RPAREN conditionalbody
    (19) type -> . INT
    (20) type -> . FLOAT
    (55) assignmentlist -> . assignment
    (56) assignment -> . NAME ASSIGN arithmeticexpr
    (57) assignment -> . startwithstar ASSIGN arithmeticexpr
    (67) startwithstar -> . POINTER startwithany

    RFBRACK         reduce using rule 23 (lines -> .)
    RETURN          shift and go to state 54
    IF              shift and go to state 56
    WHILE           shift and go to state 59
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    NAME            shift and go to state 52
    POINTER         shift and go to state 51

    type                           shift and go to state 61
    line                           shift and go to state 60
    ifblock                        shift and go to state 53
    lines                          shift and go to state 55
    startwithstar                  shift and go to state 57
    whileblock                     shift and go to state 58
    assignmentlist                 shift and go to state 63
    assignment                     shift and go to state 62

state 42

    (51) x -> COMMA pointerdef x .

    SEMICOLON       reduce using rule 51 (x -> COMMA pointerdef x .)


state 43

    (53) x -> COMMA NAME x .

    SEMICOLON       reduce using rule 53 (x -> COMMA NAME x .)


state 44

    (68) startwithany -> POINTER . startwithany
    (68) startwithany -> . POINTER startwithany
    (69) startwithany -> . AMPERSAND startwithany
    (70) startwithany -> . NAME
